; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_eswitch.c_esw_update_vport_rx_mode.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/mellanox/mlx5/core/extr_eswitch.c_esw_update_vport_rx_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mlx5_eswitch = type { i32 }
%struct.mlx5_vport = type { i32, %struct.TYPE_2__, i32 }
%struct.TYPE_2__ = type { i32 }

@.str = private unnamed_addr constant [63 x i8] c"vport[%d] context update rx mode promisc_all=%d, all_multi=%d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mlx5_eswitch*, %struct.mlx5_vport*)* @esw_update_vport_rx_mode to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @esw_update_vport_rx_mode(%struct.mlx5_eswitch* %0, %struct.mlx5_vport* %1) #0 {
  %3 = alloca %struct.mlx5_eswitch*, align 8
  %4 = alloca %struct.mlx5_vport*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.mlx5_eswitch* %0, %struct.mlx5_eswitch** %3, align 8
  store %struct.mlx5_vport* %1, %struct.mlx5_vport** %4, align 8
  store i32 0, i32* %5, align 4
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %9 = load %struct.mlx5_eswitch*, %struct.mlx5_eswitch** %3, align 8
  %10 = getelementptr inbounds %struct.mlx5_eswitch, %struct.mlx5_eswitch* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = load %struct.mlx5_vport*, %struct.mlx5_vport** %4, align 8
  %13 = getelementptr inbounds %struct.mlx5_vport, %struct.mlx5_vport* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @mlx5_query_nic_vport_promisc(i32 %11, i32 %14, i32* %6, i32* %7, i32* %5)
  store i32 %15, i32* %8, align 4
  %16 = load i32, i32* %8, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %2
  br label %53

19:                                               ; preds = %2
  %20 = load %struct.mlx5_eswitch*, %struct.mlx5_eswitch** %3, align 8
  %21 = getelementptr inbounds %struct.mlx5_eswitch, %struct.mlx5_eswitch* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load %struct.mlx5_vport*, %struct.mlx5_vport** %4, align 8
  %24 = getelementptr inbounds %struct.mlx5_vport, %struct.mlx5_vport* %23, i32 0, i32 2
  %25 = load i32, i32* %24, align 4
  %26 = load i32, i32* %5, align 4
  %27 = load i32, i32* %7, align 4
  %28 = call i32 @esw_debug(i32 %22, i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str, i64 0, i64 0), i32 %25, i32 %26, i32 %27)
  %29 = load %struct.mlx5_vport*, %struct.mlx5_vport** %4, align 8
  %30 = getelementptr inbounds %struct.mlx5_vport, %struct.mlx5_vport* %29, i32 0, i32 1
  %31 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %39

34:                                               ; preds = %19
  %35 = load %struct.mlx5_vport*, %struct.mlx5_vport** %4, align 8
  %36 = getelementptr inbounds %struct.mlx5_vport, %struct.mlx5_vport* %35, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = icmp ne i32 %37, 0
  br i1 %38, label %40, label %39

39:                                               ; preds = %34, %19
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  store i32 0, i32* %5, align 4
  br label %40

40:                                               ; preds = %39, %34
  %41 = load %struct.mlx5_eswitch*, %struct.mlx5_eswitch** %3, align 8
  %42 = load %struct.mlx5_vport*, %struct.mlx5_vport** %4, align 8
  %43 = load i32, i32* %5, align 4
  %44 = load i32, i32* %5, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %49, label %46

46:                                               ; preds = %40
  %47 = load i32, i32* %7, align 4
  %48 = icmp ne i32 %47, 0
  br label %49

49:                                               ; preds = %46, %40
  %50 = phi i1 [ true, %40 ], [ %48, %46 ]
  %51 = zext i1 %50 to i32
  %52 = call i32 @esw_apply_vport_rx_mode(%struct.mlx5_eswitch* %41, %struct.mlx5_vport* %42, i32 %43, i32 %51)
  br label %53

53:                                               ; preds = %49, %18
  ret void
}

declare dso_local i32 @mlx5_query_nic_vport_promisc(i32, i32, i32*, i32*, i32*) #1

declare dso_local i32 @esw_debug(i32, i8*, i32, i32, i32) #1

declare dso_local i32 @esw_apply_vport_rx_mode(%struct.mlx5_eswitch*, %struct.mlx5_vport*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
